rdy integration with sms and viber

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,9 +9,15 @@
 <body>
 
     <div class="header">
-        <div class="header-item"><a href="#">Аутентификация</a></div>
-        <div class="header-item"><a href="#">Отправить SMS</a></div>
-        <div class="header-item"><a href="#">Отправить Viber</a></div>
+        <div class="header-item">
+            <a href="/get_session/">Аутентификация</a>
+        </div>
+        <div class="header-item">
+            <a href="/send_sms/">Отправить SMS</a>
+        </div>
+        <div class="header-item">
+            <a href="/send_viber/">Отправить Viber</a>
+        </div>
         <div class="header-item"><a href="#">Детализация</a></div>
     </div>
 
