added get_status feature

--- a/templates/detail.html
+++ b/templates/detail.html
@@ -5,8 +5,9 @@
 
 {% block content %}
     {% block inner_content %}
-        {{ devino_response.text }}<br>
-        {{ timestamp }} <br>
-        {{ dt }}
+
+{#        {% for message in messages %}#}
+{#            {{ message.message_id }} <br>#}
+{#        {% endfor %}#}
     {% endblock %}
 {% endblock %}
