rdy send viber/sms + get statuses

--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
             <a href="{% url 'send_viber' %}">Отправить Viber</a>
         </div>
         <div class="header-item"><a href="#">Детализация</a></div>
-        <div class="header-item"><a href="{% url 'get_sms_status' %}">Cтатусы</a></div>
+        <div class="header-item"><a href="{% url 'get_status' %}">Cтатусы</a></div>
     </div>
 
     <div class="line"></div>
