--- a/templates/get_status.html
+++ b/templates/get_status.html
@@ -6,13 +6,21 @@
 {% block content %}
     {% block inner_content %}
         <div class="inner">
-            <form class="main-form" method="post" action=" {% url 'get_sms_status' %} ">
+            <form class="main-form" method="post" action=" {% url 'get_status' %} ">
                 {% csrf_token %}
                 <p>
                     <label>ИД сессии: </label>
                     <input type="text" name="session_id">
                 </p>
-                <input type="submit">
+                <p>
+                    <label>Статусы SMS</label>
+                    <input type="radio" name="channel" value="sms">
+                </p>
+                <p>
+                    <label>Статусы Viber</label>
+                    <input type="radio" name="channel" value="viber">
+                </p>
+                <input type="submit" value="Получить">
             </form>
             {% if got_statuses %}
                 Статусы запрошены успешно и сохранены в базу
