--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
 {% block content %}
         {% block inner_content %}
             <div class="inner">
-                {{r}}
+                Добро пожаловать в клиент Devino Telecom!
             </div>
         {% endblock %}
 {% endblock %}
