--- a/templates/session.html
+++ b/templates/session.html
@@ -8,14 +8,7 @@
         <div class="inner">
             <form class="main-form" method="post" action=" {% url 'get_session' %} ">
                 {% csrf_token %}
-                <p>
-                    <label>Логин: </label>
-                    <input type="text" name="login">
-                </p>
-                <p>
-                    <label>Пароль: </label>
-                    <input type="password" name="password">
-                </p>
+                {{ form.as_p }}
                 <input type="submit">
             </form>
             {{ devino_response.text }}
