--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
         <div class="header-item">
             <a href="{% url 'send_viber' %}">Отправить Viber</a>
         </div>
-        <div class="header-item"><a href="#">Детализация</a></div>
+        <div class="header-item"><a href="{% url 'detail' %}">Детализация</a></div>
         <div class="header-item"><a href="{% url 'get_status' %}">Cтатусы</a></div>
     </div>
 
