--- a/templates/send_viber.html
+++ b/templates/send_viber.html
@@ -11,7 +11,7 @@
                 {{ form.as_p }}
                 <input type="submit">
             </form>
-            {{ id }}
+            <p class="request-result">{{ id }}</p>
         </div>
     {% endblock %}
 {% endblock %}
